# macMiniDump

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  README.md
Misc/: core.hsl
Sources/: CMakeLists.txt
Sources/dumpTester/: CCompatTest.c  CMakeLists.txt  Main.cpp
Sources/examples/: CMakeLists.txt  CoreDump.cpp  CoreDumpOfACrash.cpp
Sources/macMiniDump/: CMakeLists.txt
Sources/macMiniDump/Includes/: FileOStream.hpp  IRandomAccessBinaryOStream.hpp  Logging.hpp  MacMiniDump.hpp
Sources/macMiniDump/Includes/MMD/: FileOStream.hpp  IRandomAccessBinaryOStream.hpp  Logging.hpp  MacMiniDump.hpp
Sources/macMiniDump/Private/: DataAccess.cpp  DataAccess.hpp  FileOStream.cpp  IRandomAccessBinaryOStream.cpp  MacMiniDump.cpp  MachOCoreDumpBuilder.cpp  MachOCoreDumpBuilder.hpp  MachOCoreDumpBuilder.inl  MachOCoreInternal.cpp  MachOCoreInternal.hpp  MachPortSendRightRef.cpp  MachPortSendRightRef.hpp  MemoryRegionList.cpp  MemoryRegionList.hpp  ModuleList.cpp  ModuleList.hpp  ProcessMemoryReaderDataPtr.cpp  ProcessMemoryReaderDataPtr.hpp  ReadProcessMemory.cpp  ReadProcessMemory.hpp  StackFrame.cpp  StackFrame.hpp  StackWalk.cpp  StackWalk.hpp  WalkStack.cpp  WalkStack.hpp  ZoneAllocator.cpp  ZoneAllocator.hpp
Sources/macMiniDump/Private/Utils/: AddSegmentCommandFromProcessMemory.cpp  AddSegmentCommandFromProcessMemory.hpp  Defer.hpp  GetProtectionOf.cpp  GetProtectionOf.hpp  Logging.cpp  Logging.hpp  LoggingPrivate.hpp  RegionInfo.hpp
Sources/macMiniDumpTests/: CMakeLists.txt  Tests.py
Sources/macMiniDumpTests/dumpTester/: CCompatTest.c  CMakeLists.txt  Main.cpp  ObjCOperations.m
